logs/django-yama.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_yama-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yama'...
Listing './lib/python3.5/site-packages/yama/admin'...
Listing './lib/python3.5/site-packages/yama/fixtures'...
Listing './lib/python3.5/site-packages/yama/locale'...
Listing './lib/python3.5/site-packages/yama/locale/sr'...
Listing './lib/python3.5/site-packages/yama/locale/sr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/yama/media'...
Listing './lib/python3.5/site-packages/yama/media/yama'...
Listing './lib/python3.5/site-packages/yama/media/yama/css'...
Listing './lib/python3.5/site-packages/yama/media/yama/js'...
Listing './lib/python3.5/site-packages/yama/media/yama/js/menu'...
Listing './lib/python3.5/site-packages/yama/media/yama/js/menuitem'...
Listing './lib/python3.5/site-packages/yama/migrations'...
Compiling './lib/python3.5/site-packages/yama/models.py'...
***   File "./lib/python3.5/site-packages/yama/models.py", line 77
    raise MenuItemException, \
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yama/templates'...
Listing './lib/python3.5/site-packages/yama/templates/admin'...
Listing './lib/python3.5/site-packages/yama/templates/admin/yama'...
Listing './lib/python3.5/site-packages/yama/templates/admin/yama/menu'...
Listing './lib/python3.5/site-packages/yama/templates/admin/yama/menuitem'...
Listing './lib/python3.5/site-packages/yama/templates/yama'...
Listing './lib/python3.5/site-packages/yama/templates/yama/fragments'...
Listing './lib/python3.5/site-packages/yama/templatetags'...
Listing './share'...
Listing './share/python-wheels'...
